--- a/views/home.html
+++ b/views/home.html
@@ -4,40 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercadoliebre</title>
-    <link rel="stylesheet" href="css/styles.css">
-
+    <title>Mercado Liebre</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    <header class="header_mliebre">
-        <div class="nav">
-            <div class="nav-top">
-                <div>
-                    <img src="img/logo-mercado-liebre.svg">
-                </div>
-                <div>
-                    <form>
-                        <input type="text" placeholder="Buscar productos, marcas">
-                        <button><i class="fa-solid fa-magnifying-glass"></i></button>
-                    </form>
-                </div>
-                <div>
-                    <h3><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</h3>
-                </div>
-    
-            </div>
-    
-            <div class="nav-bot"></div>
-        </div>
-        
-    
-    </header>
 
-    
-    <main></main>
+<body>
+    <header class="main-header">
+        <div class="main-navbar-top">
+            <img class="logo" src="/img/logo-mercado-liebre.svg">
+            <h2 class="text-payment">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                Comprá en cuotas y sin tarjeta de crédito
+            </h2>
+        </div>
+        <div class="bounds-mobile-button">
+            <a href="#" class="mobile-button"><i class="fa-solid fa-bars"></i></a>
+        </div>
+
+        <nav class="main-navbar-bot">
+            <ul class="left-nav-bar">
+                <li><a href="#">Todos los productos</li></a>
+                <li><a href="#">Ofertas</li></a>
+                <li><a href="#">Tiendas Oficiales</li></a>
+                <li><a href="#">Vender</li></a>
+                <li><a href="#">Ayuda</li></a>
+            </ul>
+
+            <ul class="right-nav-bar">
+                <li><a href="#">Creá tu cuenta <i class="fa-regular fa-address-card"></i></li></a>
+                <li><a href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></li></a>
+                <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></li></a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+    </main>
 
     <footer></footer>
-
     <script src="https://kit.fontawesome.com/fc3af5a98a.js" crossorigin="anonymous"></script>
 </body>
 </html>
