--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,10 @@
     <header class="main-header">
         <div class="main-navbar-top">
             <img class="logo" src="/img/logo-mercado-liebre.svg">
+            <form action="" class="searchbar">
+                <input type="text" placeholder="Buscar productos, marcas">
+                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
             <h2 class="text-payment">
                 <i class="fa-solid fa-hand-holding-dollar"></i>
                 Comprá en cuotas y sin tarjeta de crédito
@@ -38,7 +42,49 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <div class="img-home-banner">
+        <img src="/img/img-home-banner.jpg">
+    </div>
+    <main class="main-main">
+        <h3 class="titulares">Basado en tu ultima visita</h3>
+        <div class="productos-ultima-visita">
+            <ul class="product-top">
+                <img src="/img/img-cafetera-moulinex.jpg">
+                <div>
+                    <li class="precios">$41.346</li>
+                    <li class="descuentos">32% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+            <ul class="product-top">
+                <img src="/img/img-cafetera-moulinex.jpg">
+                <div>
+                    <li class="precios">$41.346</li>
+                    <li class="descuentos">32% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+            <ul class="product-top">
+                <img src="/img/img-cafetera-moulinex.jpg">
+                <div>
+                    <li class="precios">$41.346</li>
+                    <li class="descuentos">32% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+            <ul class="product-top">
+                        <img src="/img/img-cafetera-moulinex.jpg">
+                <div>
+                    <li class="precios">$41.346</li>
+                    <li class="descuentos">32% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+        </div>
     </main>
 
     <footer></footer>
