--- a/views/home.html
+++ b/views/home.html
@@ -42,12 +42,14 @@
             </ul>
         </nav>
     </header>
+
     <div class="img-home-banner">
         <img src="/img/img-home-banner.jpg">
     </div>
+
     <main class="main-main">
-        <h3 class="titulares">Basado en tu ultima visita</h3>
-        <div class="productos-ultima-visita">
+        <h3 class="titulares">Basado en tu última visita</h3>
+        <div class="productos">
             <ul class="product-top">
                 <img src="/img/img-cafetera-moulinex.jpg">
                 <div>
@@ -58,28 +60,67 @@
                 <li></li>
             </ul>
             <ul class="product-top">
-                <img src="/img/img-cafetera-moulinex.jpg">
+                <img src="/img/img-macbook-pro-2019.jpg">
                 <div>
-                    <li class="precios">$41.346</li>
-                    <li class="descuentos">32% OFF</li>
+                    <li class="precios">$230.000</li>
+                    <li class="descuentos">20% OFF</li>
                     <i class="fa-solid fa-truck"></i>
                 </div>
                 <li></li>
             </ul>
             <ul class="product-top">
-                <img src="/img/img-cafetera-moulinex.jpg">
+                <img src="/img/img-samsung-galaxy-s10.jpg">
                 <div>
-                    <li class="precios">$41.346</li>
-                    <li class="descuentos">32% OFF</li>
+                    <li class="precios">$70.500</li>
+                    <li class="descuentos">10% OFF</li>
                     <i class="fa-solid fa-truck"></i>
                 </div>
                 <li></li>
             </ul>
             <ul class="product-top">
-                        <img src="/img/img-cafetera-moulinex.jpg">
+                <img src="/img/nintendo-s.webp">
                 <div>
-                    <li class="precios">$41.346</li>
-                    <li class="descuentos">32% OFF</li>
+                    <li class="precios">$150.634</li>
+                    <li class="descuentos">15% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+        </div>
+        <h3 class="titulares">Sección de Ofertas</h3>
+        <div class="productos">
+            <ul class="product-top">
+                <img src="/img/img-tv-samsung-smart.jpg">
+                <div>
+                    <li class="precios">$132.890</li>
+                    <li class="descuentos">50% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+            <ul class="product-top">
+                <img src="/img/tostadora.webp">
+                <div>
+                    <li class="precios">$13.256</li>
+                    <li class="descuentos">25% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+            <ul class="product-top">
+                <img src="/img/play-cuatro-god.webp">
+                <div>
+                    <li class="precios">$97.894</li>
+                    <li class="descuentos">27% OFF</li>
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                <li></li>
+            </ul>
+            <ul class="product-top">
+                <img src="/img/herramientas.webp">
+                <div>
+                    <li class="precios">$19.416</li>
+                    <li class="descuentos">43% OFF</li>
                     <i class="fa-solid fa-truck"></i>
                 </div>
                 <li></li>
@@ -87,7 +128,30 @@
         </div>
     </main>
 
-    <footer></footer>
+    <footer class="main-footer">
+        <ul>
+            <i class="fa-solid fa-credit-card"></i>
+            <h3 class="titulares-footer">Pagá con tarjeta o efectivo</h3>
+            <p>
+                Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!
+            </p>
+        </ul>
+        <ul>
+            <i class="fa-solid fa-gift"></i>
+            <h3 class="titulares-footer">Envío gratis desde $ 2.500</h3>
+            <p>
+                Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.
+            </p>
+        </ul>
+        <ul>
+            <i class="fa-solid fa-user-shield"></i>
+            <h3 class="titulares-footer">Seguridad, de principio a fin</h3>
+            <p>
+                ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.
+            </p>
+        </ul>
+    </footer>
+    <h2 class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</h2>
     <script src="https://kit.fontawesome.com/fc3af5a98a.js" crossorigin="anonymous"></script>
 </body>
 </html>
